# devops

.github/workflows/: build-all-examples.yml  codeql.yml  gradle-wrapper-validation.yml  nohttp.yml
junit-jupiter-starter-bazel/: MODULE.bazel
junit-jupiter-starter-sbt/project/: plugins.sbt
junit-multiple-engines/: build.gradle.kts
