JUNIT_VERSION = "6.0.3"

bazel_dep(name = "rules_android", version = "0.7.1")
bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_jvm_external", version = "6.10")
bazel_dep(name = "contrib_rules_jvm", version = "0.32.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    known_contributing_modules = ["", "protobuf"],
    artifacts = [
        "org.junit.platform:junit-platform-launcher:%s" % JUNIT_VERSION,
        "org.junit.platform:junit-platform-reporting:%s" % JUNIT_VERSION,
        "org.junit.jupiter:junit-jupiter-api:%s" % JUNIT_VERSION,
        "org.junit.jupiter:junit-jupiter-params:%s" % JUNIT_VERSION,
        "org.junit.jupiter:junit-jupiter-engine:%s" % JUNIT_VERSION,
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)

use_repo(maven, "maven")
